--- a/index.html
+++ b/index.html
@@ -2966,7 +2966,7 @@ imageCaption: "",
   },
   {
     question: "Câu 211: Công thức chuẩn hóa theo phương pháp Min-Max nào đúng: ",
-    image: "images/211.jpg",
+    image: "images1/211.jpg",
     imageCaption: "",
 
     options: ["Đáp án A", "Đáp án B", "Đáp án C", "Đáp án D"],
@@ -2974,7 +2974,7 @@ imageCaption: "",
   },
   {
     question: "Câu 212: Công thức chuẩn hóa theo Tỷ lệ thập phân nào đúng: ",
-    image: "images/212.jpg",
+    image: "images1/212.jpg",
     imageCaption: "",
     options: ["Đáp án A", "Đáp án B", "Đáp án C", "Đáp án D"],
     correctAnswer: 0
@@ -3156,7 +3156,7 @@ imageCaption: "",
   },
   {
     question: "Câu 232: Cho CSDL giao dịch như hình vẽ với Min_Support = 2 (50%). Sử dụng thuật toán Apriori, sau lần duyệt thứ hai, danh sách L2 chứa các tập mục thường xuyên có 2-item được tạo ra là: ",
-    image: "images/232.jpg",
+    image: "images1/232.jpg",
     imageCaption: "",
 
     options: [
@@ -3169,7 +3169,7 @@ imageCaption: "",
   },
   {
     question: "Câu 233: Cho CSDL giao dịch như hình vẽ với Min_Support = 2 (50%).Sử dụng thuật toán Apriori, sau lần duyệt thứ hai, các tập mục có 2-item được không thỏa mãn độ hỗ trợ tối thiểu là:   ",
-    image: "images/233.jpg",
+    image: "images1/233.jpg",
     imageCaption: "",
 
     options: [
@@ -3182,7 +3182,7 @@ imageCaption: "",
   },
   {
     question: "Câu 234: Cho CSDL giao dịch như hình vẽ với Min_Support = 2 (50%). Sử dụng thuật toán Apriori, cho L2={{A,C}, {B,C}, {B,E}, {C,E}} là danh sách các tập mục thường xuyên có 2-item. Giả sử tập mục {A,B} và {A,E} không là tập mục thường xuyên. Sau khi ghép các tập mục thường xuyên 2-item với nhau để được danh sách L3 chứa các tập mục thường xuyên có 3-item, L3 là:  ",
-    image: "images/234.jpg",
+    image: "images1/234.jpg",
     imageCaption: "",
     options: [
       "L3={{B, C, E}}",
@@ -3194,7 +3194,7 @@ imageCaption: "",
   },
   {
     question: "Câu 235: Cho tập ví dụ học như bảng. Theo phân lớp Bayes thì bộ X={Outlook=’Overcast’, Temperature=’Cold’, Humidity=’Normal’, Wind=’Strong’} thuộc lớp nào:  ",
-    image: "images/235.jpg",
+    image: "images1/235.jpg",
     imageCaption: "",
     options: [
       "Lớp Play Ball = 'Yes'",
@@ -3206,7 +3206,7 @@ imageCaption: "",
   },
   {
     question: "Câu 236: Cho tập ví dụ học như bảng. Theo 	phân 	lớp 	Bayes 	thì 	bộ 	X={Outlook=’Rain’, 	Temperature=’Cold’, Humidity=’High’, Wind=’Weak’} thuộc lớp nào:   ",
-    image: "images/236.jpg",
+    image: "images1/236.jpg",
     imageCaption: "",
     options: [
       "Lớp Play Ball = 'No'",
@@ -3218,7 +3218,7 @@ imageCaption: "",
   },
   {
     question: "Câu 237: Cho tập ví dụ học như bảng. Theo 	phân 	lớp 	Bayes 	thì 	bộ 	X={Outlook=’Rain’, 	Temperature=’Cold’, Humidity=’Normal’, Wind=’Weak’} thuộc lớp nào:  ",
-    image: "images/237.jpg",
+    image: "images1/237.jpg",
     imageCaption: "",
     options: [
       "Lớp Play Ball = 'No'",
@@ -3230,7 +3230,7 @@ imageCaption: "",
   },
   {
     question: "Câu 238: Cho tập ví dụ học như bảng. Theo 	phân 	lớp 	Bayes 	thì 	bộ 	X={Outlook=’Sunny’, 	Temperature=’Cold’, Humidity=’Normal’, Wind=’Strong’} thuộc lớp nào. ",
-    image: "images/238.jpg",
+    image: "images1/238.jpg",
     imageCaption: "",
     options: [
       "Lớp Play Ball = 'Yes'",
@@ -3242,7 +3242,7 @@ imageCaption: "",
   },
   {
     question: "Câu 239: Cho FP-Tree như hình vẽ, cây điều kiện FP của nút f là: ",
-    image: "images/239.jpg",
+    image: "images1/239.jpg",
     imageCaption: "",
     options: [
       "Cây rỗng",
@@ -3254,7 +3254,7 @@ imageCaption: "",
   },
   {
     question: "Câu 240: Cho FP-Tree như hình vẽ, cây điều kiện FP của nút C là: ",
-    image: "images/240.jpg",
+    image: "images1/240.jpg",
     imageCaption: "",
     options: [
       "Cây rỗng",
@@ -3266,7 +3266,7 @@ imageCaption: "",
   },
   {
     question: "Câu 241: Cho FP-Tree như hình vẽ, cây điều kiện FP của nút a là: ",
-    image: "images/241.jpg",
+    image: "images1/241.jpg",
     imageCaption: "",
     options: [
       "{f:4, c:3}",
@@ -3278,7 +3278,7 @@ imageCaption: "",
   },
   {
     question: "Câu 242: Cho đồ thị như hình vẽ, đồ thị trên biểu diễn gì ? ",
-    image: "images/242.jpg",
+    image: "images1/242.jpg",
     imageCaption: "",
     options: [
       "So sánh Thời gian thực thi với số lượng giao dịch",
@@ -3290,7 +3290,7 @@ imageCaption: "",
   },
   {
     question: "Câu 243: Cho đồ thị như hình vẽ. Từ đồ thị ta thấy: ",
-    image: "images/243.jpg",
+    image: "images1/243.jpg",
     imageCaption: "",
     options: [
       "Với cùng số lượng giao dịch như nhau, thời gian thực thi của thuật toán FP-Growth luôn nhiều hơn thời gian thực thi của thuật toán Apriori ",
@@ -3302,7 +3302,7 @@ imageCaption: "",
   },
   {
     question: "Câu 244: Cho đồ thị như hình vẽ. Nhận xét nào sau đây là sai: ",
-    image: "images/244.jpg",
+    image: "images1/244.jpg",
     imageCaption: "",
     options: [
       "Với cùng số lượng giao dịch như nhau, thời gian thức thi thuật toán FP-Growth luôn ít hơn thời gian thực thi thuật toán Apriori ",
@@ -3314,7 +3314,7 @@ imageCaption: "",
   },
   {
     question: "Câu 245: Cho đồ thị như hình vẽ, đồ thị trên biểu diễn gì ? ",
-    image: "images/245.jpg",
+    image: "images1/245.jpg",
     imageCaption: "",
     options: [
       "So sánh giữa Thời gian thực thi (tính bằng giây) của 2 thuật toán FP-Growth và Apriori trên 2 Database D1 và Database D2 ",
@@ -3326,7 +3326,7 @@ imageCaption: "",
   },
   {
     question: "Câu 246: Cho đồ thị như hình vẽ. Từ đồ thị ta thấy: ",
-    image: "images/246.jpg",
+    image: "images1/246.jpg",
     imageCaption: "",
     options: [
       "Với cùng ngưỡng của độ hỗ trợ, thời gian thực thi của thuật toán FP-Growth luôn nhiều hơn thời gian thực thi của thuật toán Apriori ",
@@ -3338,7 +3338,7 @@ imageCaption: "",
   },
   {
     question: "Câu 247: Cho đồ thị như hình vẽ. Nhận xét nào sau đây là sai: ",
-    image: "images/247.jpg",
+    image: "images2/247.jpg",
     imageCaption: "",   
     options: [
       "Với cùng ngưỡng độ hỗ trợ, thời gian thức thi thuật toán FP-Growth luôn ít hơn thời gian thực thi thuật toán Apriori ",
@@ -3350,28 +3350,28 @@ imageCaption: "",
   },
   {
     question: "Câu 248: Hãy cho biết đáp án nào trong các đáp án trên là đúng: ",
-    image: "images/248.jpg",
+    image: "images2/248.jpg",
     imageCaption: "", 
     options: ["Đáp án B", "Đáp án A", "Đáp án C", "Đáp án D"],
     correctAnswer: 1
   },
   {
     question: "Câu 249: Hãy cho biết đáp án nào trong các đáp án trên là đúng: ",
-   image: "images/249.jpg",
+   image: "images2/249.jpg",
     imageCaption: "", 
     options: ["Đáp án B", "Đáp án A", "Đáp án C", "Đáp án D"],
     correctAnswer: 1
   },
   {
     question: "Câu 250: Hãy cho biết đáp án nào trong các đáp án trên là đúng:",
-   image: "images/250.jpg",
+   image: "images2/250.jpg",
     imageCaption: "", 
     options: ["Đáp án B", "Đáp án A", "Đáp án C", "Đáp án D"],
     correctAnswer: 1
   },
   {
     question: "Câu 251: Cho tập ví dụ học như bảng. X={Outlook=’Sunny’, Temperature=’Cold’, Humidity=’Normal’, Wind=’Strong’} là một mẫu. Thuộc Wind có các giá trị ‘Weak’ và ‘Strong’, với:  ",
-   image: "images/251.jpg",
+   image: "images2/251.jpg",
     imageCaption: "", 
     options: [
       "P(Weak|Yes)=2/3; P(Weak|No)=1/3; P(Strong|Yes)=2/3; P(Strong|No)=2/3",
@@ -3383,7 +3383,7 @@ imageCaption: "",
   },
   {
     question: "Câu 252: Cho tập ví dụ học như bảng. X={Outlook=’Sunny’, Temperature=’Cold’, Humidity=’Normal’, Wind=’Strong’}là một mẫu. Thuộc Humidity có các giá trị ‘Normal’ và ‘High’, với:  ",
-   image: "images/252.jpg",
+   image: "images2/252.jpg",
     imageCaption: "", 
     options: [
       "P(Normal|Yes)=2/3; P(Normal|No)=1/3; P(High|Yes)=1/3; P(High|No)=2/3",
@@ -3485,7 +3485,7 @@ imageCaption: "",
   },
   {
     question: "Câu 264: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như  sau: Sử dụng thuật toán liên kết đầy đủ (Complete Linkage). Bước đầu tiên ta gom x1, x2 hình vào cụm C1={x1, x2}, bước thứ 2 ta sẽ thực hiện thế nào: ",
-    image: "images/264.jpg",
+    image: "images2/264.jpg",
     imageCaption: "",
 
     options: ["Gom x3 với C1", "Gom x4 với C1", "Gom x3 với x5", "Gom x3 với x4"],
@@ -3493,7 +3493,7 @@ imageCaption: "",
   },
   {
     question: "Câu 265: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như hình. Sử dụng thuật toán liên kết đơn (Single Linkage). Bước đầu tiên ta gom x1, x2, vào cụm C1, bước thứ 2 ta sẽ gom hai cụm nào với nhau: ",
-    image: "images/265.jpg",
+    image: "images2/265.jpg",
     imageCaption: "",
 
     options: ["Gom x3 với x4", "Gom x4 với C1", "Gom x3 với x5", "Gom x3 với C1"],
@@ -3501,7 +3501,7 @@ imageCaption: "",
   },
   {
     question: "Câu 266: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như hình. Sử dụng thuật toán liên kết đơn (Single Linkage). Bước đầu tiên ta gom x1, x2 vào cụm C1, ma trận không tương tự P1 được sinh ra có dòng thứ nhất liệt kê từ trái sang phải là: ",
-   image: "images/266.jpg",
+   image: "images2/266.jpg",
     imageCaption: "",
 
     options: ["0;9;8;7", "1;9;6;5", "1;2;6;6", "0;2;6;5"],
@@ -3509,21 +3509,21 @@ imageCaption: "",
   },
   {
     question: "Câu 267: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như hình. Sử dụng thuật toán liên kết đầy đủ (Complete Linkage). Bước đầu tiên ta gom x1, x2 vào cụm C1, ma trận không tương tự P1 được sinh ra có dòng thứ nhất liệt kê từ trái sang phải là:  ",
-     image: "images/267.jpg",
+     image: "images2/267.jpg",
     imageCaption: "",
     options: ["0;2;6;5", "1;9;6;5", "1;2;6;5", "0;9;8;7"],
     correctAnswer: 3
   },
   {
     question: "Câu 268: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như hình. Sử dụng thuật toán liên kết đơn (Single Linkage). Bước đầu tiên gom x1 và x2 hình thành cụm C1={x1, x2}; bước 2 ta gom C1 và x3 hình thành cụm C2={x1, x2, x3}. Hỏi bước thứ 3, ta sẽ gom thế nào:  ",
-    image: "images/268.jpg",
+    image: "images2/268.jpg",
     imageCaption: "",
     options: ["Gom x4 với C1", "Gom x4 với x5", "Gom x5 với C1", "Gom x4 với C2"],
     correctAnswer: 3
   },
   {
     question: "Câu 269: Cho tập dữ liệu X={x1, x2, x3, x4, x5} và ma trận không tương tự như hình. Sử dụng thuật toán liên kết đầy đủ (Complete Linkage). Bước đầu tiên gom x1 và x2 hình thành cụm C1={x1, x2}; bước 2 ta gom x3 và x4 hình thành cụm C2={x3, x4}. Hỏi bước thứ 3, ta sẽ gom thế nào: ",
-   image: "images/269.jpg",
+   image: "images2/269.jpg",
     imageCaption: "",
     options: ["Gom x3 với C2", "Gom x3 với x5", "Gom x5 với C2", "Gom C1 với x5"],
     correctAnswer: 3
@@ -4169,5 +4169,6 @@ imageCaption: "",
         init();
     </script>
 </body>
+
 
 </html>
